--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -21,7 +21,7 @@
             "CSS"
         ],
         "demo": "https://www.example.com",
-        "source": "https://www.github.com"
+        "source": "https://github.com/Hitesh-93/Personal-Portfolio.git"
     },
     {
         "title": "Online Restaurant",
