--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -20,7 +20,7 @@
             "HTML",
             "CSS"
         ],
-        "demo": "#",
+        "demo": "https://personal-portfolio-nu-livid.vercel.app/",
         "source": "https://github.com/Hitesh-93/Personal-Portfolio.git"
     },
     {
