--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -21,7 +21,7 @@
             "CSS"
         ],
         "demo": "https://personal-portfolio-nu-livid.vercel.app/",
-        "source": "https://github.com/Hitesh-93/Personal-Portfolio.git"
+        "source": "#"
     },
     {
         "title": "Online Restaurant",
